Fix user dropup alignment

--- a/src/styles/components/user-dropdown-menu.less
+++ b/src/styles/components/user-dropdown-menu.less
@@ -147,6 +147,16 @@
   padding: 0;
 }
 
+.user-dropdown-menu,
+.sidebar-footer-user-dropdown {
+
+  .tooltip-wrapper {
+    font-size: inherit;
+    height: auto;
+    text-align: left;
+  }
+}
+
 & when (@screen-small-enabled) {
   @media (min-width: @screen-small) {
     .user-dropdown {
